Modified with db

--- a/.env
+++ b/.env
@@ -2,3 +2,11 @@ IBM_API_KEY="9dhWazh67-KWTUjf80FnPsmEUx828u1vid3PNrFAmuSS"
 IBM_SERVICE_URL=https://us-south.ml.cloud.ibm.com/
 IBM_PROJECT_ID="52cf4e44-2a8c-474d-b247-11957cc6891d"
 IBM_MODEL_ID=meta-llama/llama-4-maverick-17b-128e-instruct-fp8
+
+
+DB_HOST="localhost"
+DB_PORT=5432
+DB_NAME="TVS_Credit"
+DB_USER="postgres"
+DB_PASSWORD="HelloWorld"
+
